# agents_groups

./: .gitignore  README.md
agents/intelligence_collector_agent/: .gitignore  A股_港股通_可迭代股票研究池_跟踪建议.md  ChangeLog.md  README.md  dashboard.html  mic.db  pyproject.toml  情报收集员Agent完整设计说明书.md
agents/intelligence_collector_agent/config/: intelligence_collector.yaml
agents/intelligence_collector_agent/docs/: ARCHITECTURE.md  COMMANDS.md
agents/intelligence_collector_agent/examples/: golden_events.yaml  periodic_reviews.yaml  research_pool_full.yaml
agents/intelligence_collector_agent/examples/demands/: company_research_daily.json  held_sellable_10m.json  industry_research_daily.json  market_black_swan.json  tool_capability_check.json
agents/intelligence_collector_agent/tests/: test_dashboard.py  test_internal.py  test_new_features.py  test_request_center.py  test_research_dashboard.py  test_review_hardening.py  test_reviewer_round2.py  test_v081_reviewer_closure.py  test_v08_research_loop.py
tools/market_intelligence_collector/: .env.example  .gitignore  MANIFEST.in  README.md  market_intelligence_collector.md  pyproject.toml  requirements-model.txt  requirements.txt
tools/market_intelligence_collector/config/: access_profiles.yaml  analyst_taxonomy.yaml  call_governance.yaml  merge_policy.yaml  model_policies.yaml  model_registry.yaml  output_schema.yaml  query_families.yaml  query_scoring.yaml  search_providers.yaml  source_packs.yaml  storage_policy.yaml  target_profiles.yaml
tools/market_intelligence_collector/mic/: __init__.py  api.py  cli.py  config.py  logging_utils.py  merge.py  pipeline.py  planner.py  profile.py  reader.py  schemas.py  search.py  triage.py  utils.py  validate.py
tools/market_intelligence_collector/searxng/: docker-compose.yml
tools/market_intelligence_collector/tests/: conftest.py  test_audit_fixes.py  test_event_tracking_variables.py  test_pipeline.py  test_search_providers.py  test_vision_extract.py
tools/market_intelligence_collector/tools/: check_release_clean.py  e2e_validate.py  run_offline_e2e.sh  run_tests.sh
tools/stock_data_collector/: .env.example  README.md  pyproject.toml  requirements.txt
tools/stock_data_collector/config/: data_quality.yaml  data_sources.yaml  storage.yaml
tools/stock_data_collector/stock_data_ingestion/: __init__.py  cli.py  config.py  env.py  logging_config.py
tools/stock_data_collector/tests/: conftest.py  test_akshare_adapter_manual_coverage.py  test_baostock_adapter.py  test_baostock_ingestion_runner.py  test_bar_record_schema.py  test_cli.py  test_cli_compatibility.py  test_comparison_missing_fields.py  test_conflict_detection.py  test_datetime_and_units.py  test_env_loading.py  test_field_level_supplement.py  test_field_provenance_strict.py  test_idempotency.py  test_ingestion_runner_e2e.py  test_joinquant_security_master_adapter.py  test_merge_policy.py  test_parquet_business_key.py  test_parquet_business_key_dedupe.py  test_provider_selection.py  test_provider_selection_config.py  test_quality_score.py  test_quality_score_regression.py  test_query_service.py  test_raw_object_store.py  test_raw_object_store_metadata_hash.py  test_request_response_schema.py  test_runner_fallback_policy.py  test_sqlite_schema.py  test_ticker_normalization.py  test_tushare_event_and_calendar_adapter.py  test_tushare_hk_daily_adapter.py  test_tushare_manual_interface_compliance.py  test_tushare_security_master_adapter.py
tools/stock_data_collector/tools/: akshare_stock_probe.py  baostock_stock_probe.py  daily_mvp_smoke.py  tushare_empty_debug.py  tushare_stock_probe.py  update_eastmoney_cookie.py
tools/stock_data_collector/tushare_probe_outputs/: tushare_empty_debug_20260607_134804.json  tushare_empty_debug_20260607_134804.md  tushare_empty_debug_20260607_145226.json  tushare_empty_debug_20260607_145226.md  tushare_empty_debug_20260607_160749.json  tushare_empty_debug_20260607_160749.md  tushare_stock_probe_20260607_111730.json  tushare_stock_probe_20260607_111730.md  tushare_stock_probe_20260607_145206.json  tushare_stock_probe_20260607_145206.md  tushare_stock_probe_20260607_160740.json  tushare_stock_probe_20260607_160740.md
(+85 files in other folders)
