[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trade-intelligence-collector"
version = "0.5.1"
description = "OpenClaw-ready intelligence collection agent for Agent交易公司"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agent交易公司" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
intel-agent = "agent_trade_intel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
