[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intelligence-collector"
version = "0.3.0"
description = "MIC: search-driven, fully-configurable intelligence collection and structured analysis tool for analysts and analyst agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MIC" }]
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "openai>=1.30",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mic = "mic.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mic*"]

[tool.ruff]
line-length = 100
target-version = "py310"
