[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intelligence-collector"
version = "0.3.1"
description = "Search-driven market intelligence collection and structured analysis tool."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MIC contributors" }]
license = { text = "Proprietary" }
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.0",
    "Pillow>=10.0",
    "pydantic>=2.5",
    "pypdf>=4.0",
    "pypdfium2>=4.30",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "SQLAlchemy>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
model = ["openai>=1.30"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
all = [
    "openai>=1.30",
    "psycopg[binary]>=3.1",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
mic = "mic.cli:app"

[tool.setuptools]
packages = ["mic", "mic.modeling", "mic.store"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
